<resources>
    <string name="app_name">Tabuada</string>
    <string name="texto_informativo">Vamos calcular a tabuada, digite um valor e daremos a você a tabuada do número escolhido!</string>
    <string name="informative_text">Vamos calcular a tabuada, digite um valor e daremos a você a tabuada do número escolhido!</string>
    <string name="valor_tabuada">Digite o valor da tabuada</string>
    <string name="calcular_tabuada">calcular tabuada</string>
    <string name="recalcular_tabuada">recalcular tabuada</string>
    <string name="tabuada_calculada">tabuada calculada</string>
    <string name="tabuada_do_X">tabuada do $numeroDigitado</string>
    <string name="resultado_tabuada">Resultado</string>
    <string name="MSG_PREENCHER_VALORES">"Insira um número para calcular a tabuada primeiro"</string>
</resources>